[gd_scene load_steps=14 format=3 uid="uid://cwm6oyr7ft0u3"]

[ext_resource type="Script" path="res://Scripts/World_Scripts/world_ui.gd" id="1_cfmbx"]
[ext_resource type="Texture2D" uid="uid://c8aeffipixgvt" path="res://Assets/Tilesets/SeaSprites/WorldBezel.png" id="1_ds54m"]
[ext_resource type="FontFile" uid="uid://jiobqv87vkb1" path="res://Assets/Fonts/super-mario-land-gb-doublecase.ttf" id="2_6xpnr"]
[ext_resource type="Texture2D" uid="uid://bvwqxyamt1lvg" path="res://Assets/Sprites/Mario/Big_run1.png" id="3_bryrp"]
[ext_resource type="Texture2D" uid="uid://b5k1qxur5qnvy" path="res://Assets/Sprites/Mario/Big_run2.png" id="4_ixv53"]
[ext_resource type="Texture2D" uid="uid://ytb4na58nwxk" path="res://Assets/Sprites/Mario/Big_run3.png" id="5_shpcg"]
[ext_resource type="Texture2D" uid="uid://dlo3d5vp4wtjg" path="res://Assets/Sprites/Mario/Small_run1.png" id="6_mbeuy"]
[ext_resource type="Texture2D" uid="uid://baul2ukxp5a13" path="res://Assets/Sprites/Mario/Small_run2.png" id="7_tj0jh"]
[ext_resource type="Texture2D" uid="uid://cs076i1d5hi2a" path="res://Assets/Sprites/Mario/Small_run3.png" id="8_iu3ai"]

[sub_resource type="LabelSettings" id="LabelSettings_0o5hc"]
font = ExtResource("2_6xpnr")
font_size = 7
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ec3rv"]
font = ExtResource("2_6xpnr")
font_size = 7
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_520oq"]
font = ExtResource("2_6xpnr")
font_size = 7
font_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_vppms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bryrp")
}, {
"duration": 1.0,
"texture": ExtResource("4_ixv53")
}, {
"duration": 1.0,
"texture": ExtResource("5_shpcg")
}],
"loop": true,
"name": &"Big_Shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_mbeuy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tj0jh")
}, {
"duration": 1.0,
"texture": ExtResource("8_iu3ai")
}],
"loop": true,
"name": &"Small",
"speed": 10.0
}]

[node name="WorldUI" type="CanvasLayer"]
script = ExtResource("1_cfmbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(127.931, 72.0813)
texture = ExtResource("1_ds54m")

[node name="Lives" type="Label" parent="."]
offset_left = 40.0
offset_top = 16.0
offset_right = 57.0
offset_bottom = 24.0
text = "05"
label_settings = SubResource("LabelSettings_0o5hc")

[node name="WorldArea" type="Label" parent="."]
offset_left = 178.695
offset_top = 9.3273
offset_right = 242.695
offset_bottom = 17.3273
text = "BIRABUTO"
label_settings = SubResource("LabelSettings_ec3rv")
horizontal_alignment = 2

[node name="LevelName" type="Label" parent="."]
offset_left = 216.349
offset_top = 16.3364
offset_right = 242.349
offset_bottom = 25.3364
text = "3-3"
label_settings = SubResource("LabelSettings_520oq")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MarioMap" type="AnimatedSprite2D" parent="."]
position = Vector2(23.6088, 14.2544)
sprite_frames = SubResource("SpriteFrames_vppms")
animation = &"Big_Shoot"
autoplay = "Small"
frame_progress = 0.0332253
flip_h = true
